<resources>
    <string name="app_name">CondorLabs Skill Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movie_list_fragment_label">Popular Movies</string>
    <string name="movie_detail_fragment_label">Detail Movie</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="movie_img_url">https://image.tmdb.org/t/p/original/%s</string>
    <string name="movie_video_url">https://www.youtube.com/watch?v=%s</string>
    <string name="movie_name">%s</string>
    <string name="movie_average">Average: %s</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_date">Release Date</string>
    <string name="release_date_text">Release Date</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="movie_overview_text">Overview</string>
    <string name="budget">Budget</string>
    <string name="budget_text">%s</string>
    <string name="by_author">By. José Alejandro Franco Calderon</string>
    <string name="video_available">video available</string>
    <string name="video_not_available">video not available</string>
</resources>