<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="movie"
            type="com.buildappswithalejing.condorlabs_skill_test.network.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/movie_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_overview"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/movie_overview"
            app:layout_constraintStart_toEndOf="@+id/icon_movie_overview"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_overview_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="@+id/movie_overview"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
            tools:text="Show overview" />


        <ImageView
            android:id="@+id/icon_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/movie_release"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_release"
            app:srcCompat="@drawable/ic_date" />


        <TextView
            android:id="@+id/movie_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toEndOf="@+id/icon_release_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview_text" />

        <TextView
            android:id="@+id/movie_release_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/release_date_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/movie_release"
            app:layout_constraintStart_toEndOf="@+id/movie_release"
            app:layout_constraintTop_toTopOf="@+id/movie_release" />

        <ImageView
            android:id="@+id/icon_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/movie_budget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_budget"
            app:srcCompat="@drawable/ic_money" />

        <TextView
            android:id="@+id/movie_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/budget"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toEndOf="@+id/icon_budget"
            app:layout_constraintTop_toBottomOf="@+id/movie_release" />

        <TextView
            android:id="@+id/movie_budget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/budget_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/movie_budget"
            app:layout_constraintStart_toEndOf="@+id/movie_budget"
            app:layout_constraintTop_toTopOf="@+id/movie_budget" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>